--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,23 @@
     </header>
 
     <main v-cloak>
-        <h2>{{ heading }}</h2>
+        <h2>{{ headingUpload }}</h2>
+
+        <form method="POST" action="/upload" enctype="multipart/form-data">
+            <div class="form-row">
+                Title <input name="title" type="text" v-model="title">
+                Description <input name="description" type="text" v-model="description">
+                Username <input name="username" type="text" v-model="username">
+            </div>
+            <div class="form-row upload">
+                File 
+                <input name="image" id="image" class="input-file" type="file" accept="image/*" @change="handleFileChange">
+                <label for="image">Choose a file</label>
+                <button @click="handleUpload">Upload</button>
+            </div>
+        </form>
+
+        <h2>{{ headingImages }}</h2>
         <div class="container">
             <div class="card" v-for="image in images">
                 <img :src="image.url" :alt="image.title">
