--- a/public/index.html
+++ b/public/index.html
@@ -1,67 +1,84 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imageboard</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
-    <header>
-        <h1>Image Board</h1>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Imageboard</title>
+        <link rel="stylesheet" href="/styles.css" />
+    </head>
+    <body>
+        <header>
+            <h1>Forest Board</h1>
+        </header>
 
-    <main v-cloak>
-        <h2>{{ headingUpload }}</h2>
+        <main v-cloak>
+            <h2>{{ headingUpload }}</h2>
 
-        <form method="POST" action="/upload" enctype="multipart/form-data">
-            <div class="form-row">
-                Title <input name="title" type="text" v-model="title">
-                Description <input name="description" type="text" v-model="description">
-                Username <input name="username" type="text" v-model="username">
+            <form method="POST" action="/upload" enctype="multipart/form-data">
+                <div class="form-row">
+                    Title
+                    <input name="title" type="text" v-model="title" />
+                    Description
+                    <input
+                        name="description"
+                        type="text"
+                        v-model="description"
+                    />
+                    Username
+                    <input name="username" type="text" v-model="username" />
+                </div>
+                <div class="form-row">
+                    File
+                    <input
+                        name="image"
+                        id="image"
+                        class="input-file"
+                        type="file"
+                        accept="image/*"
+                        @change="handleFileChange"
+                    />
+                    <label for="image">{{ fileLabel }}</label>
+                    <button @click="handleUpload">Upload</button>
+                </div>
+            </form>
+
+            <h2>{{ headingImages }}</h2>
+            <div class="container">
+                <div
+                    class="card"
+                    v-for="image in images"
+                    @click="openModal(image.id)"
+                >
+                    <img :src="image.url" :alt="image.title" />
+                    <div class="description">{{ image.title }}</div>
+                </div>
             </div>
-            <div class="form-row upload">
-                File 
-                <input name="image" id="image" class="input-file" type="file" accept="image/*" @change="handleFileChange">
-                <label for="image">Choose a file</label>
-                <button @click="handleUpload">Upload</button>
+
+            <modal
+                v-if="modalActive"
+                :id="modalActive"
+                @close="hideModal"
+            ></modal>
+        </main>
+
+        <script id="template" type="text/x-template">
+            <div class="modal" @click.self="closeModal">
+                <div class="modal-card">
+                    <img :src="image.url" :alt="image.title">
+                    <h3>{{ image.title }}</h3>
+                    <p>{{ image.description }}</p>
+                    <p class="user-info">uploaded by {{ image.username }} on {{ image.time }}</p>
+                    <h4 class="modal-button" @click="closeModal">close</h4>
+                    <h4 class="modal-button" @click="prevImage(image.id)">previous</h4>
+                    <h4 class="modal-button" @click="nextImage(image.id)">next</h4>
+                </div>
             </div>
-        </form>
+        </script>
 
-        <h2>{{ headingImages }}</h2>
-        <div class="container">
-            <div class="card" v-for="image in images" @click="openModal(image.id)">
-                <img :src="image.url" :alt="image.title">
-                <div class="description">{{ image.title }}</div>
-            </div>
-        </div>
+        <footer>&#169; Forest Board | 2020</footer>
 
-        <modal 
-            v-if="modalActive"
-            :id="modalActive"
-            @close="hideModal"
-        ></modal>
-    </main>
-
-    <script id="template" type="text/x-template">
-        <div class="modal" :image-id="id">
-            <div class="modal-card">
-                <img :src="image.url" :alt="image.title">
-                <h3>{{ image.title }}</h3>
-                <p>{{ image.description }}</p>
-                <p>{{ image.username }} {{ image.created_at }}</p>
-                <h4 @click="closeModal">close</h4>
-            </div>
-        </div>
-    </script>
-
-
-    <footer>
-        &#169; My Imageboard | 2020
-    </footer>
-
-    <script src="/js/vue.js"></script>
-    <script src="/js/axios.min.js"></script>
-    <script src="/js/script.js"></script>
-</body>
+        <script src="/js/vue.js"></script>
+        <script src="/js/axios.min.js"></script>
+        <script src="/js/script.js"></script>
+    </body>
 </html>
