--- a/public/index.html
+++ b/public/index.html
@@ -43,22 +43,26 @@
             </form>
 
             <h2>{{ headingImages }}</h2>
-            <div class="container">
-                <div
-                    class="card"
-                    v-for="image in images"
-                    @click="openModal(image.id)"
+            <div class="gallery-container">
+                <a :href="'#' + image.id" v-for="image in images">
+                    <div class="card">
+                        <img :src="image.url" :alt="image.title" />
+                        <div class="description">{{ image.title }}</div>
+                    </div>
+                </a>
+            </div>
+            <div class="button-container">
+                <button
+                    class="more-button"
+                    @click="requestImages"
+                    v-if="moreButton"
                 >
-                    <img :src="image.url" :alt="image.title" />
-                    <div class="description">{{ image.title }}</div>
-                </div>
+                    More
+                </button>
             </div>
 
-            <modal
-                v-if="modalActive"
-                :id="modalActive"
-                @close="hideModal"
-            ></modal>
+            <modal v-if="modalActive" :id="modalActive" @close="hideModal">
+            </modal>
         </main>
 
         <script id="template" type="text/x-template">
@@ -68,11 +72,28 @@
                     <h3>{{ image.title }}</h3>
                     <p>{{ image.description }}</p>
                     <p class="user-info">uploaded by {{ image.username }} on {{ image.time }}</p>
-                    <h4 class="modal-button" @click="closeModal">close</h4>
-                    <h4 class="modal-button" @click="prevImage(image.id)">previous</h4>
-                    <h4 class="modal-button" @click="nextImage(image.id)">next</h4>
+                    <comments :id="modalActive"></comments>
+                    <h4 class="modal-button" @click="closeModal">Close</h4>
+                    <h4 class="modal-button" @click="prevImage(image.id)" v-if="previous">Previous</h4>
+                    <h4 class="modal-button" @click="nextImage(image.id)" v-if="next">Next</h4>
+                    <h4 class="modal-button" @click="confirmDelete(image.id)">Delete</h4>
                 </div>
+                <popup :id="modalActive" v-if="deleteId"></popup>
             </div>
+        </script>
+
+        <script id="comment-template" type="text/x-template">
+            <div class="comment-container">comments</div>
+        </script>
+
+        <script id="popup-template" type="text/x-template">
+            <div class="modal popup" @click.self="closePopup">
+                    <div class="modal-card popup-card">
+                        Are you sure you want to delete this image?
+                        <h4 class="modal-button" @click="closePopup">No</h4>
+                        <h4 class="modal-button" @click="deleteImage">Yes</h4>
+                    </div>
+                </div>
         </script>
 
         <footer>&#169; Forest Board | 2020</footer>
