--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,12 @@
         <main v-cloak>
             <h2>{{ headingUpload }}</h2>
 
-            <form method="POST" action="/upload" enctype="multipart/form-data">
+            <form
+                class="image-form"
+                method="POST"
+                action="/upload"
+                enctype="multipart/form-data"
+            >
                 <div class="form-row">
                     Title
                     <input name="title" type="text" v-model="title" />
@@ -51,7 +56,7 @@
                     </div>
                 </a>
             </div>
-            <div class="button-container">
+            <div class="more-container">
                 <button
                     class="more-button"
                     @click="requestImages"
@@ -77,11 +82,13 @@
                     <h3>{{ image.title }}</h3>
                     <p>{{ image.description }}</p>
                     <p class="user-info">uploaded by {{ image.username }} on {{ image.time }}</p>
+                    <div class="button-container">
+                        <h4 class="modal-button" @click="closeModal">Close</h4>
+                        <h4 class="modal-button" @click="prevImage" v-if="previous">Previous</h4>
+                        <h4 class="modal-button" @click="nextImage" v-if="next">Next</h4>
+                        <h4 class="modal-button" @click="confirmDelete(image.id)">Delete</h4>
+                    </div>
                     <comments :id="id"></comments>
-                    <h4 class="modal-button" @click="closeModal">Close</h4>
-                    <h4 class="modal-button" @click="prevImage" v-if="previous">Previous</h4>
-                    <h4 class="modal-button" @click="nextImage" v-if="next">Next</h4>
-                    <h4 class="modal-button" @click="confirmDelete(image.id)">Delete</h4>
                 </div>
                 <popup v-if="deleteId" :id="deleteId" @close="hidePopup" @deleted="forgetModal"></popup>
             </div>
@@ -89,16 +96,17 @@
 
         <script id="comment-template" type="text/x-template">
             <div>
+                <h3>Leave a comment</h3>
                 <form method="POST" action="/comment">
-                    <div class="form-row">
+                    <div class="comment-container">
                         Comment
                         <input name="title" type="text" v-model="comment"/>
                         Username
                         <input name="username" type="text" v-model="username"/>
                     </div>
-                    <button @click="handlePost">Post comment</button>
+                    <button class="comment-button" @click="handlePost">Post comment</button>
                 </form>
-                <div class="comment-container">
+                <div>
                     <h3>Previous comments</h3>
                     <div class="comment-card" v-for="comment     in comments">
                         <div>{{ comment.comment }}</div>
