--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,15 @@
         </header>
 
         <main v-cloak>
-            <h2>{{ headingUpload }}</h2>
+            <h2>Upload your favorite forest image</h2>
 
             <form
+                name="upload-form"
                 class="image-form"
                 method="POST"
                 action="/upload"
                 enctype="multipart/form-data"
+                autocomplete="off"
             >
                 <div class="form-row">
                     Title
@@ -43,16 +45,16 @@
                         @change="handleFileChange"
                     />
                     <label for="image">{{ fileLabel }}</label>
-                    <button @click="handleUpload">Upload</button>
+                    <button class="upload-button" @click="handleUpload">Upload</button>
                 </div>
             </form>
 
-            <h2>{{ headingImages }}</h2>
+            <h2>Gallery</h2>
             <div class="gallery-container">
                 <a :href="'#' + image.id" v-for="image in images">
                     <div class="card">
                         <img :src="image.url" :alt="image.title" />
-                        <div>{{ image.title }}</div>
+                        <div class="img-title">{{ image.title }}</div>
                     </div>
                 </a>
             </div>
@@ -83,10 +85,12 @@
                     <p>{{ image.description }}</p>
                     <p class="user-info">uploaded by {{ image.username }} on {{ image.time }}</p>
                     <div class="button-container">
+                        <h4 class="modal-button" @click="prevImage" v-if="previous"><</h4>
+                        <h4 class="modal-button hidden-button" v-else></h4>
                         <h4 class="modal-button" @click="closeModal">Close</h4>
-                        <h4 class="modal-button" @click="prevImage" v-if="previous">Previous</h4>
-                        <h4 class="modal-button" @click="nextImage" v-if="next">Next</h4>
                         <h4 class="modal-button" @click="confirmDelete(image.id)">Delete</h4>
+                        <h4 class="modal-button" @click="nextImage" v-if="next">></h4>
+                        <h4 class="modal-button hidden-button" v-else></h4>
                     </div>
                     <comments :id="id"></comments>
                 </div>
@@ -97,21 +101,25 @@
         <script id="comment-template" type="text/x-template">
             <div>
                 <h3>Leave a comment</h3>
-                <form method="POST" action="/comment">
+                <form name="comment-form" method="POST" action="/comment" autocomplete="off">
                     <div class="input-container">
                         Comment
-                        <input name="title" type="text" v-model="comment"/>
+                        <input name="comment" type="text" v-model="comment"/>
                         Username
                         <input name="username" type="text" v-model="username"/>
                     </div>
                     <button class="input-button" @click="handlePost">Post comment</button>
                 </form>
-                <div class="comment-container">
+                <div class="comment-container" v-if="active">
                     <h3>Previous comments</h3>
-                    <div class="comment-card" v-for="comment     in comments">
+                    <div class="comment-card" v-for="comment in comments">
+                        <button class="delete-button" @click="deleteComment(comment.id)">delete</button>
                         <div>{{ comment.comment }}</div>
                         <p class="user-info">posted by {{ comment.username }} on {{ comment.time }}</p>
                     </div>
+                </div>
+                <div class="comment-container" v-else>
+                    <h3>Be the first one to comment!</h3>
                 </div>
             </div>
         </script>
@@ -119,9 +127,11 @@
         <script id="popup-template" type="text/x-template">
             <div class="modal popup" @click.self="closePopup">
                     <div class="modal-card popup-card">
-                        Are you sure you want to delete this image?
-                        <h4 class="modal-button" @click="closePopup">No</h4>
-                        <h4 class="modal-button" @click="deleteImage">Yes</h4>
+                        <h3>Are you sure you want to permanently delete this image?</h3>
+                        <div class="button-container">
+                            <h4 class="modal-button" @click="deleteImage">Yes</h4>
+                            <h4 class="modal-button" @click="closePopup">No</h4>
+                        </div>
                     </div>
                 </div>
         </script>
